--- a/registeration.html
+++ b/registeration.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>User login
+        
+    </title>
     <link rel="stylesheet" href="registeration.CSS">
 </head>
 <body>
