--- a/index.html
+++ b/index.html
@@ -2,60 +2,92 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About Me - Product Manager</title>
+  <title>AGMAZON - The Future of Agro-Commerce</title>
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
-<body style="margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #1c1c1c; color: #f2f2f2;">
+<body style="margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #f5f9f8; color: #333;">
 
-  <!-- Top Navigation -->
-  <header style="position: absolute; top: 0; right: 0; padding: 20px;">
-    <nav>
-      <a href="About me.html" style="color: #f2f2f2; margin-right: 20px; text-decoration: none; font-weight: bold; font-size: 16px;">About Me</a>
-      <a href="portfolio.html" style="color: #f2f2f2; text-decoration: none; font-weight: bold; font-size: 16px;">Portfolio</a>
+  <!-- Navigation Bar -->
+  <header style="background-color: #004d40; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000;">
+    <div style="font-size: 24px; color: #ffffff; font-weight: bold;">
+      🌾 AGMAZON
+    </div>
+    <nav style="flex: 1; text-align: center;">
+      <a href="#home" style="margin: 0 15px; color: #ffffff; text-decoration: none; font-weight: 500;">Home</a>
+      <a href="#about" style="margin: 0 15px; color: #ffffff; text-decoration: none; font-weight: 500;">About Us</a>
+      <a href="#services" style="margin: 0 15px; color: #ffffff; text-decoration: none; font-weight: 500;">Services</a>
+      <a href="#faq" style="margin: 0 15px; color: #ffffff; text-decoration: none; font-weight: 500;">FAQ</a>
+      <a href="#contact" style="margin: 0 15px; color: #ffffff; text-decoration: none; font-weight: 500;">Contact Us</a>
     </nav>
+    <div>
+      <a href="Login.html" style="margin-right: 15px; background-color: #00796b; color: white; padding: 8px 14px; border-radius: 4px; text-decoration: none;">Login</a>
+      <a href="Signup.html" style="background-color: #00acc1; color: white; padding: 8px 14px; border-radius: 4px; text-decoration: none;">Sign Up</a>
+    </div>
   </header>
 
-  <!-- Main Layout -->
-  <main style="display: flex; flex-direction: row; height: 100vh;">
-
-    <!-- Left Side - Image -->
-    <div style="flex: 1; background-color: #000; display: flex; justify-content: center; align-items: center;">
-      <label for="profile-img-input" style="cursor: pointer;">
-        <img id="profile-img"
-             src="https://via.placeholder.com/400x500.png?text=Your+Photo"
-             alt="Your Photo"
-             style="height: 90%; width: auto; max-width: 100%; object-fit: cover; border: 5px solid #333;" />
-      </label>
-      <input type="file" id="profile-img-input" accept="image/*"
-             style="display: none;" onchange="previewImage(event)" />
+  <!-- Hero Section -->
+  <section id="home" style="display: flex; align-items: center; justify-content: space-between; padding: 80px 40px; background: linear-gradient(to right, #e0f2f1, #ffffff);">
+    <div style="flex: 1; padding-right: 40px;">
+      <h1 style="font-size: 42px; color: #004d40;">Bridging Farmers and Markets</h1>
+      <p style="font-size: 18px; line-height: 1.6; margin-top: 20px;">AGMAZON connects smallholder farmers with reliable buyers using a digital-first, mobile-friendly platform. Fresh produce. Trusted sellers. Transparent logistics.</p>
+      <a href="Signup.html" style="display: inline-block; margin-top: 25px; background-color: #00796b; color: white; padding: 12px 25px; border-radius: 5px; text-decoration: none; font-weight: bold;">Get Started</a>
     </div>
-
-    <!-- Right Side - About Me Text -->
-    <div style="flex: 1; padding: 60px 40px; display: flex; flex-direction: column; justify-content: center;">
-      <h1 style="font-size: 36px; margin-bottom: 20px;">Hello, I'm <span contenteditable="true">[Your Name]</span></h1>
-      <p contenteditable="true" style="line-height: 1.7; font-size: 18px; color: #cccccc;">
-        I’m a product manager who thrives on turning ideas into impact. I blend curiosity, user empathy, and technical understanding
-        to bring digital products to life. From defining roadmaps to writing PRDs, I work cross-functionally to deliver user-centered experiences.
-        <br><br>
-        Click this text to update your personal story, background, values, or aspirations.
-      </p>
+    <div style="flex: 1;">
+      <img src="AGMAZON.jpg" alt="Hero Image" style="width: 100%; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.2);" />
     </div>
+  </section>
 
-  </main>
+  <!-- About Us -->
+  <section id="about" style="padding: 60px 40px; background-color: #ffffff;">
+    <h2 style="text-align: center; color: #004d40;">About Us</h2>
+    <p style="max-width: 800px; margin: 20px auto; text-align: center; font-size: 17px; line-height: 1.6;">
+      AGMAZON is a digital agricultural marketplace designed for African farmers and buyers. We simplify access, streamline logistics, and ensure quality through verified sellers and real-time tracking. From local produce to farm tools — AGMAZON is your go-to agri-commerce platform.
+    </p>
+  </section>
 
-  <!-- Inline Script for Image Preview -->
-  <script>
-    function previewImage(event) {
-      const input = event.target;
-      const reader = new FileReader();
-      reader.onload = function () {
-        const img = document.getElementById("profile-img");
-        img.src = reader.result;
-      };
-      if (input.files && input.files[0]) {
-        reader.readAsDataURL(input.files[0]);
-      }
-    }
-  </script>
+  <!-- Services -->
+  <section id="services" style="padding: 60px 40px; background-color: #e0f2f1;">
+    <h2 style="text-align: center; color: #004d40;">What We Offer</h2>
+    <div style="display: flex; flex-wrap: wrap; gap: 30px; justify-content: center; margin-top: 40px;">
+      <div style="flex: 1 1 250px; background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <h3 style="color: #00796b;">🌽 Verified Produce Listings</h3>
+        <p>Farmers upload detailed product info including price, harvest date, and quality certifications.</p>
+      </div>
+      <div style="flex: 1 1 250px; background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <h3 style="color: #00796b;">📦 Seamless Order & Delivery</h3>
+        <p>Buyers place orders, select delivery, and track items with full visibility.</p>
+      </div>
+      <div style="flex: 1 1 250px; background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <h3 style="color: #00796b;">💰 Secure Payment Options</h3>
+        <p>Multiple payment modes including wallet, USSD, and mobile money — fully encrypted.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section id="faq" style="padding: 60px 40px; background-color: #ffffff;">
+    <h2 style="text-align: center; color: #004d40;">FAQs</h2>
+    <div style="max-width: 800px; margin: auto; margin-top: 30px;">
+      <p><strong>How do I register as a farmer?</strong><br />You can sign up directly or through an AGMAZON field agent who will help you verify your ID and farm location.</p>
+      <p><strong>Can buyers trust the product quality?</strong><br />Yes! Sellers are verified and buyers can view seller ratings, freshness tags, and product images before ordering.</p>
+      <p><strong>How are deliveries handled?</strong><br />AGMAZON partners with reliable logistics teams to ensure fast and transparent deliveries across Nigeria.</p>
+    </div>
+  </section>
+
+  <!-- Contact Us -->
+  <section id="contact" style="padding: 60px 40px; background-color: #e0f2f1;">
+    <h2 style="text-align: center; color: #004d40;">Contact Us</h2>
+    <p style="text-align: center;">Email: support@agmazon.africa | WhatsApp: +234-000-000-0000</p>
+  </section>
+
+  <!-- Footer -->
+  <footer style="background-color: #004d40; color: white; text-align: center; padding: 20px;">
+    &copy; 2025 AGMAZON. All rights reserved. | Made with 💚 in Africa
+  </footer>
 
 </body>
 </html>
