--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
   <!-- Top Navigation -->
   <header style="position: absolute; top: 0; right: 0; padding: 20px;">
     <nav>
-      <a href="About me.html" style="color: #f2f2f2; margin-right: 20px; text-decoration: none; font-weight: bold; font-size: 16px;">About Me</a>
+      <a href="index.html" style="color: #f2f2f2; margin-right: 20px; text-decoration: none; font-weight: bold; font-size: 16px;">About Me</a>
       <a href="portfolio.html" style="color: #f2f2f2; text-decoration: none; font-weight: bold; font-size: 16px;">Portfolio</a>
     </nav>
   </header>
