--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <div class="icon-links">
       <a href="preciousomoyeni6@gmail.com">📧</a>
       <a href="https://www.linkedin.com/in/precious-omoyeni-a4ba3425b?">🔗</a>
-      <a href="https://twitter.com/yourhandle">❌</a>
+      <a href="https://x.com/omoryheni?t=g7mevrD5ISfPnF7mnH_hYQ&s=09">❌</a>
     </div>
   </section>
 
@@ -276,75 +276,105 @@
   <h2 style="font-size: 2rem; margin-bottom: 1.5rem; color: #2e2e2e;">About Me</h2>
   <img src="MY PHOTO.jpg" alt="Profile Photo" style="width: 150px; height: 150px; border-radius: 50%; object-fit: cover; margin-bottom: 1.5rem;" />
   <div style="max-width: 750px; margin: 0 auto; color: #555; font-size: 1rem; line-height: 1.8; text-align: left;">
-    <p>I am <strong>Precious Omoyeni</strong>, a product manager with a deep interest in building thoughtful, user-friendly digital products.</p>
-    <p>I’ve worked on several products where I collaborated closely with engineers, designers, and stakeholders to define features, write user stories, and help bring ideas to life. I enjoy connecting the dots between user needs, business goals, and technical realities.</p>
-    <p>Over time, I’ve picked up skills in wireframing, user research, writing PRDs, and using tools like Figma, Notion, and Linear. I’ve also explored technical workflows like understanding how coding works and basic deployment, which helps me better understand how products actually get built.</p>
-    <p>What drives me most is curiosity. I love asking why, figuring out how things work, and finding better ways to solve real problems. I’m especially drawn to fast-moving environments where there’s room to learn, grow, and build things that make a difference. I’m committed to learning, improving, and delivering meaningful value one feature at a time.</p>
-  </div>
+  <p style="margin-bottom: 1.2rem;">
+    I am <strong>Precious Omoyeni</strong>, a Product Manager with a deep interest in building thoughtful, user-friendly digital products.
+  </p>
+
+  <p style="margin-bottom: 1.2rem;">
+    I’ve worked on several products where I collaborated closely with engineers, designers, and stakeholders to define features, write user stories, and help bring ideas to life. I enjoy connecting the dots between user needs, business goals, and technical realities.
+  </p>
+
+  <p style="margin-bottom: 1.2rem;">
+    Over time, I’ve picked up skills in wireframing, user research, PRD writing, and using tools like Figma, Notion, and Linear. I've also explored technical workflows like understanding how code works and basic deployment, which helps me better understand how products actually get built.
+  </p>
+
+  <p style="margin-bottom: 1.2rem;">
+    What drives me most is curiosity. I love asking why, figuring out how things work, and finding better ways to solve real problems. I’m especially drawn to fast-moving environments where there’s room to learn, grow, and build things that make a difference.
+  </p>
+
+  <p style="margin-bottom: 1.2rem;">
+    I’m committed to learning, improving, and delivering meaningful value, one feature at a time.
+  </p>
+
+
+   
 
   <div style="margin-top: 3rem;">
-    <h3 style="color: #2e2e2e; margin-bottom: 1rem;">Skills</h3>
-    <div style="display: flex; flex-wrap: wrap; gap: 0.75rem; justify-content: center;">
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Product strategy</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Wireframing</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Roadmapping</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">User flow</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Market research</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">PRD writing</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Communication</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Problem solving</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Analytical skills</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Testing</span>
-    </div>
-  </div>
+   <!-- Skills Section -->
+<h3 style="text-align: center; margin-top: 2rem; color: #3e3e3e;">Skills</h3>
+<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 0.6rem; margin: 1rem 0 2rem;">
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Product strategy</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Wireframing</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Roadmapping</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">User flow</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Market research</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">PRD writing</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Communication</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Problem solving</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Analytical skills</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;"> API Testing</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Technical knowledge[API, Database,  Basic Html and Css, Basic deployment]</span>
 
-  <div style="margin-top: 3rem;">
-    <h3 style="color: #2e2e2e; margin-bottom: 1rem;">Tools</h3>
-    <div style="display: flex; flex-wrap: wrap; gap: 0.75rem; justify-content: center;">
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Google Docs</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Google Sheets</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Notion</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Jira</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">ClickUp</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Linear</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Trello</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Figma</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">GitHub</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Lovable</span>
-      <span style="background-color: #fdf6ec; padding: 0.5rem 1rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Postman</span>
-    </div>
-  </div>
-</section>
+</div>
 
-  </div>
+<!-- Tools Section -->
+<h3 style="text-align: center; color: #3e3e3e;">Tools</h3>
+<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 0.6rem; margin: 1rem 0 2rem;">
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Google Docs</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Google Sheets</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Notion</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Jira</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">ClickUp</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Linear</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Trello</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Figma</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">GitHub</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Lovable</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Postman</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">VScode</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">N8N</span>
+  <span style="background: #fdf6ec; color: #7a5c3d; padding: 0.4rem 0.9rem; border-radius: 16px; font-size: 0.9rem;">Netlify</span>
 
-  <!-- Include Projects Section -->
+
+
+</div>
+
+<!-- Include Projects Section -->
   <!-- Drag your projects.html content below -->
   <div id="projects-section">
     <section id="projects" style="background-color: #fdf6ec; padding: 4rem 2rem; font-family: 'Inter', sans-serif;">
   <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2.5rem; color: #2e2e2e;">Projects</h2>
   <div style="display: grid; gap: 2rem; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); max-width: 1000px; margin: 0 auto;">
 
-    <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
+<div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
       <h3 style="margin-bottom: 0.5rem; color: #333;">Gradific</h3>
-      <p style="color: #555; margin-bottom: 0.75rem;">A web app designed to automate grading for educators.</p>
-      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, Google doc, Linear, power point, Google sheets, Postman</p>
+      <p style="color: #555; margin-bottom: 0.75rem;">An AI-powered grading tool designed to solve manual grading problems In Nigeria</p>
+      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, GitHub, Google doc,notion,Google sheet</p>
       <a href="project 1.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
+    </div>
+
+
+    <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
+      <h3 style="margin-bottom: 0.5rem; color: #333;">Agmazon</h3>
+      <p style="color: #555; margin-bottom: 0.75rem;">An Agricultural E-commerce platforms that connects farmers to buyers.</p>
+      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, GitHub, Google doc,notion,Google sheet</p>
+      <a href="Project 3.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
     </div>
 
     <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
       <h3 style="margin-bottom: 0.5rem; color: #333;">Suiviparcel</h3>
       <p style="color: #555; margin-bottom: 0.75rem;">A delivery app(mobile and web app) that allows people send parcel and monitor them.</p>
       <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Google doc, Figma, trello, Linear,Google Sheets</p>
-      <a href="#" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View Project →</a>
+      <a href="Project 2.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View Project →</a>
     </div>
 
     <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
-      <h3 style="margin-bottom: 0.5rem; color: #333;">Agmazon</h3>
-      <p style="color: #555; margin-bottom: 0.75rem;">An Agricultural E-commerce platforms that connects farmers to buyers.</p>
-      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, GitHub, Google doc,notion,Google sheet</p>
-      <a href="#" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
-    </div>
+  <h3 style="margin-bottom: 0.5rem; color: #333;">Agricon</h3>
+  <p style="color: #555; margin-bottom: 0.75rem;">An Agricultural platform that connects Farmers to Agricultural drying Facilities.</p>
+  <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, Google Docs, Notion, Postman</p>
+  <a href="project 4.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
+</div>
+
 
   </div>
 </section>
@@ -361,7 +391,7 @@
     Download my resume or explore my skills below to see how I help transform ideas into impactful digital solutions.
   </p>
 
-  <a href="My resume.pdf" download style="display: inline-block; padding: 0.75rem 1.5rem; background-color: #7a5c3d; color: #fff; text-decoration: none; border-radius: 30px; font-weight: 500; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: background-color 0.3s ease;">
+  <a href="Omoyeni Resume.pdf" download style="display: inline-block; padding: 0.75rem 1.5rem; background-color: #7a5c3d; color: #fff; text-decoration: none; border-radius: 30px; font-weight: 500; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: background-color 0.3s ease;">
     Download Resume (PDF)
   </a>
 
@@ -377,6 +407,8 @@
       <span style="background-color: #fdf6ec; padding: 0.5rem 1.2rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Problem Solving</span>
       <span style="background-color: #fdf6ec; padding: 0.5rem 1.2rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Analytical Skills</span>
       <span style="background-color: #fdf6ec; padding: 0.5rem 1.2rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">User Testing</span>
+      <span style="background-color: #fdf6ec; padding: 0.5rem 1.2rem; border-radius: 30px; color: #7a5c3d; font-weight: 500;">Market Reasearch</span>
+
     </div>
   </div>
 </section>
