--- a/project 1.html
+++ b/project 1.html
@@ -60,8 +60,9 @@
     <span>Figma</span><span>Google Docs</span><span>Google Sheet</span>
     <span>Trello</span><span>Linear</span>
   </div>
-  <p><strong>Product Asset:</strong> PRD</p>
-  <p><strong>Product Link:</strong> <a href="https://gradfic.com" target="_blank">gradfic.com</a></p>
+  <p><strong>Product Asset:</strong> <a href="GRADIFIC- PRD .pdf" target="_blank">gradfic's PRD</a></p>
+
+  <p><strong>Product Link:</strong> <a href="https://gradific.com/" target="_blank">gradfic.com</a></p>
 
   <hr>
 
