--- a/Project 2.html
+++ b/Project 2.html
@@ -48,9 +48,9 @@
     <span>Figma</span><span>Google Docs</span><span>Google Sheet</span>
     <span>Trello</span><span>Linear</span>
   </div>
-  <p><strong>Product Asset:</strong> <a href="Product Requirements Document_ SUIVI.pdfs" target="_blank">Suivi's PRD</a></p>
+  <p><strong>Product Asset:</strong> <a href="Product Requirements Document_ SUIVI.pdf" target="_blank">Suivi's PRD</a></p>
 
-  <p><strong>Product Link:</strong> Suivi.com</p>
+  <p><strong>Product Link:</strong>[Coming soon]</p>
 
   <hr>
 
