--- a/Project 3.html
+++ b/Project 3.html
@@ -92,13 +92,7 @@
 
   <hr>
 
-  <div class="section">
-    <h2>User Flow</h2>
-    <p><strong>Link:</strong> <a href="#">AGMAZON User Flow</a></p>
-    <div class="placeholder-img">User Flow Placeholder</div>
-  </div>
 
-  <hr>
 
   <div class="section">
     <h2>User Persona</h2>
@@ -152,7 +146,7 @@
     <ul>
       <li>Created the MVP product scope and design spec</li>
       <li>Defined user personas and mapped journeys</li>
-      <li>Collaborated with engineers to set up product workflows</li>
+      <li>Created the landing page</li>
       <li>Planned go-to-market and testing strategy</li>
     </ul>
   </div>
@@ -174,7 +168,6 @@
     <h2>Key Learnings</h2>
     <ul>
       <li>Local trust is critical — partnerships with local cooperatives improve adoption</li>
-      <li>Clear UI/UX reduces support inquiries and drives usage</li>
       <li>Seller onboarding is key to building a supply-rich marketplace</li>
     </ul>
   </div>
