--- a/Project 2.html
+++ b/Project 2.html
@@ -50,7 +50,7 @@
   </div>
   <p><strong>Product Asset:</strong> <a href="Product Requirements Document_ SUIVI.pdf" target="_blank">Suivi's PRD</a></p>
 
-  <p><strong>Product Link:</strong>[Coming soon]</p>
+  <p><strong>Product Link:</strong>  <a href="//suiviparcel.com/"  target="_blank">suiviparcel.com</a> </p>
 
   <hr>
 
