--- a/Project 2.html
+++ b/Project 2.html
@@ -37,6 +37,27 @@
       margin: 0.2rem;
       font-size: 0.9rem;
     }
+
+    .project-image-container {
+    margin: 20px 0 30px 0;
+    text-align: center;
+}
+
+.project-image {
+   width: 50%;
+  max-width: 900px;
+    border-radius: 14px;
+
+    /* Balanced softness */
+    opacity: 0.88;
+    filter: brightness(0.96);
+
+    
+}
+
+
+
+
   </style>
 </head>
 <body>
@@ -48,9 +69,12 @@
     <span>Figma</span><span>Google Docs</span><span>Google Sheet</span>
     <span>Trello</span><span>Linear</span>
   </div>
-  <p><strong>Product Asset:</strong> <a href="Product Requirements Document_ SUIVI.pdf" target="_blank">Suivi's PRD</a></p>
+  <p><strong>Product Asset:</strong> <a href="Suivi's PRD.pdf" target="_blank">Suivi's PRD</a></p>
 
   <p><strong>Product Link:</strong>  <a href="//suiviparcel.com/"  target="_blank">suiviparcel.com</a> </p>
+
+   <!-- 🔥 HERO IMAGE INSERTED HERE -->
+  <img src="sleek.png" alt="SUIVI App Overview" class="project-hero">
 
   <hr>
 
@@ -115,7 +139,7 @@
     </ul>
     <h3>Rider Journey:</h3>
     <ul>
-      <li>Accept Assignment → Use Map/Audio Navigation → Update Status at Each Stage → Upload Delivery Proof → Mark Task Complete</li>
+      <li>Accept pickup → Use Map Navigation → Update Status at Each Stage → Upload Delivery Proof → Mark Task Complete</li>
     </ul>
     <h3>Admin Journey:</h3>
     <ul>
@@ -145,7 +169,11 @@
     <ul>
       <li>Drafted the comprehensive PRD for development teams.</li>
       <li>Defined all user roles and permissions (sender, rider, admin).</li>
-      <li>Collaborated with engineers to implement features.</li>
+      <li>Collaborated with Designers, Devops, Frontend and backend engineers to implement the webapp MVP features.</li>
+     <li>Collaborated with mobile developers to build the mobile app.</li>
+    <li>Communicated with stakeholders to ensure the project ran smoothly.</li>
+
+
     </ul>
   </div>
 
@@ -154,8 +182,8 @@
   <div class="section">
     <h2>Key Results</h2>
     <ul>
-      <li>A working MVP on Flask that supported real-time parcel status updates.</li>
-      <li>Tested Email/Push notification flows for key delivery moments (e.g., pickup, in-transit, arriving).</li>
+      <li> Developed a fully functional web and mobile  delivery app thereby  closing the logistic gap in Kenya .</li>
+  
     </ul>
   </div>
 
@@ -164,9 +192,9 @@
   <div class="section">
     <h2>Key Learnings</h2>
     <ul>
-      <li>Transparency builds trust – users need consistent updates, not just tracking links.</li>
-      <li>Successful delivery requires structure.</li>
-      <li>A unified UI/UX system improves adoption across both desktop and future mobile rollouts.</li>
+      <li>It takes a lot to build a product.</li>
+      <li>As a product manager your soft skill will hep you align a cross-functional team at all times.</li>
+      <li>A unified UI/UX system improves adoption across both desktop and mobile apps.</li>
     </ul>
   </div>
 
