--- a/index.html
+++ b/index.html
@@ -224,19 +224,14 @@
   <section id="home" class="hero">
     <h1 id="heroTitle">Omoyeni Taiye Precious</h1>
     <h2 id="heroRole">Product Manager</h2>
-    <p id="heroTagline">I turn complex user problems into useful digital solutions that drive business growth.</p>
+    <p id="heroTagline">I turn user problems into useful digital solutions that drive business growth.</p>
 
     <div class="btn-group">
       <a href="#projects" class="btn primary">View My Work</a>
       <a href="#contact" class="btn secondary">Get In Touch</a>
     </div>
 
-    <div class="icon-links">
-      <a href="preciousomoyeni6@gmail.com">📧</a>
-      <a href="https://www.linkedin.com/in/precious-omoyeni-a4ba3425b?">🔗</a>
-      <a href="https://x.com/omoryheni?t=g7mevrD5ISfPnF7mnH_hYQ&s=09">❌</a>
-    </div>
-  </section>
+   
 
   <script>
     function toggleMenu() {
@@ -347,32 +342,32 @@
   <div style="display: grid; gap: 2rem; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); max-width: 1000px; margin: 0 auto;">
 
 <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
-      <h3 style="margin-bottom: 0.5rem; color: #333;">Gradific</h3>
-      <p style="color: #555; margin-bottom: 0.75rem;">An AI-powered grading tool designed to solve manual grading problems In Nigeria</p>
-      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, GitHub, Google doc,notion,Google sheet</p>
-      <a href="project 1.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
+      <h3 style="margin-bottom: 0.5rem; color: #333;">Suiviparcel</h3>
+      <p style="color: #555; margin-bottom: 0.75rem;">A delivery app(mobile and web app) that allows people send parcel and monitor them.</p>
+      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, postman,Trello, Linear, Google sheet</p>
+      <a href="Project 2.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
     </div>
 
+
+    <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
+      <h3 style="margin-bottom: 0.5rem; color: #333;">Agricon</h3>
+      <p style="color: #555; margin-bottom: 0.75rem;">An Agricultural platform that connects Farmers to Agricultural drying Facilities.</p>
+      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, linear,Google Doc</p>
+      <a href="project 4.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
+    </div>
 
     <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
       <h3 style="margin-bottom: 0.5rem; color: #333;">Agmazon</h3>
       <p style="color: #555; margin-bottom: 0.75rem;">An Agricultural E-commerce platforms that connects farmers to buyers.</p>
-      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, GitHub, Google doc,notion,Google sheet</p>
-      <a href="Project 3.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
+      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Google doc, Figma, Github, trello, Linear,Google Sheets</p>
+      <a href="Project 3.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View Project →</a>
     </div>
 
     <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
-      <h3 style="margin-bottom: 0.5rem; color: #333;">Suiviparcel</h3>
-      <p style="color: #555; margin-bottom: 0.75rem;">A delivery app(mobile and web app) that allows people send parcel and monitor them.</p>
-      <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Google doc, Figma, trello, Linear,Google Sheets</p>
-      <a href="Project 2.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View Project →</a>
-    </div>
-
-    <div style="background: #fff; padding: 1.5rem; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
-  <h3 style="margin-bottom: 0.5rem; color: #333;">Agricon</h3>
-  <p style="color: #555; margin-bottom: 0.75rem;">An Agricultural platform that connects Farmers to Agricultural drying Facilities.</p>
-  <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, Google Docs, Notion, Postman</p>
-  <a href="project 4.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
+  <h3 style="margin-bottom: 0.5rem; color: #333;">Gradific</h3>
+  <p style="color: #555; margin-bottom: 0.75rem;">An AI-powered grading tool designed to solve manual grading problems In Nigeria.</p>
+  <p style="font-size: 0.9rem; color: #777; margin-bottom: 1rem;"><strong>Tools:</strong> Figma, Google Docs, Notion, Postman, Google sheet</p>
+  <a href="project 1.html" style="text-decoration: none; color: #7a5c3d; font-weight: 600;">View project →</a>
 </div>
 
 
