--- a/Project 2.html
+++ b/Project 2.html
@@ -65,7 +65,7 @@
   <h1>Project: SUIVI</h1>
   <p><strong>Category:</strong> Logistics</p>
   <div class="tools-list">
-    <strong>Tools:</strong>
+    <strong>Tools Used:</strong>
     <span>Figma</span><span>Google Docs</span><span>Google Sheet</span>
     <span>Trello</span><span>Linear</span>
   </div>
