--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     Download my resume or explore my skills below to see how I help transform ideas into impactful digital solutions.
   </p>
 
-  <a href="Omoyeni Resume.pdf" download style="display: inline-block; padding: 0.75rem 1.5rem; background-color: #7a5c3d; color: #fff; text-decoration: none; border-radius: 30px; font-weight: 500; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: background-color 0.3s ease;">
+  <a href="Precious Taiwo- PM CV.docx.pdf" download style="display: inline-block; padding: 0.75rem 1.5rem; background-color: #7a5c3d; color: #fff; text-decoration: none; border-radius: 30px; font-weight: 500; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: background-color 0.3s ease;">
     Download Resume (PDF)
   </a>
 
@@ -421,7 +421,7 @@
 
   <div style="display: flex; justify-content: center; gap: 2rem; flex-wrap: wrap;">
     <a href="preciousomoyeni6@gmail.com" style="display: flex; align-items: center; gap: 0.5rem; padding: 1rem 1.5rem; background-color: #fdf6ec; color: #7a5c3d; border-radius: 10px; text-decoration: none; box-shadow: 0 4px 8px rgba(0,0,0,0.05); font-weight: 500;">
-      📧 preciousomoyeni@gmail.com
+      📧 preciousomoyeni6@gmail.com
     </a>
 
     <a href="https://www.linkedin.com/in/precious-omoyeni-a4ba3425b?" target="_blank" style="display: flex; align-items: center; gap: 0.5rem; padding: 1rem 1.5rem; background-color: #fdf6ec; color: #7a5c3d; border-radius: 10px; text-decoration: none; box-shadow: 0 4px 8px rgba(0,0,0,0.05); font-weight: 500;">
