--- a/project 1.html
+++ b/project 1.html
@@ -56,7 +56,7 @@
   <h1>Project: Gradific</h1>
   <p><strong>Category:</strong> Education</p>
   <div class="tools-list">
-    <strong>Tools:</strong>
+    <strong>Tools used:</strong>
     <span>Figma</span><span>Google Docs</span><span>Google Sheet</span>
     <span>Trello</span><span>Linear</span>
   </div>
