--- a/Project 3.html
+++ b/Project 3.html
@@ -44,7 +44,7 @@
   <h1>Project: AGMAZON</h1>
   <p><strong>Category:</strong> Agricultural eCommerce</p>
   <div class="tools-list">
-    <strong>Tools:</strong>
+    <strong>Tools Used:</strong>
     <span>Figma</span><span>Google Docs</span><span>Google Sheet</span>
     <span>Trello</span><span>Linear</span>
   </div>
