--- a/project 4.html
+++ b/project 4.html
@@ -49,6 +49,21 @@
       color: #999;
       margin: 1.5rem 0;
     }
+
+     .project-image-container {
+    margin: 20px 0 30px 0;
+    text-align: center;
+}
+
+.project-image {
+   width: 50%;
+  max-width: 900px;
+    border-radius: 14px;
+
+    /* Balanced softness */
+    opacity: 0.88;
+    filter: brightness(0.96);
+}
   </style>
 </head>
 <body>
@@ -56,12 +71,16 @@
   <h1>Project: AgriCon</h1>
   <p><strong>Category:</strong> Agriculture</p>
   <div class="tools-list">
-    <strong>Tools:</strong>
+    <strong>Tools used:</strong>
     <span>Figma</span><span>Google Docs</span><span>Linear</span><span>Postman</span>
   </div>
   <p><strong>Product Asset:</strong> <a href="AGRICON PRD by Group 5.pdf" target="_blank">Agricon's PRD</Agricon's PRD></a></p>
 
   <p><strong>Product Link:</strong> <a href="https://agricon.com.ng/" target="_blank">Agricon.com</Agricon></a></p>
+
+   <!-- 🔥 HERO IMAGE INSERTED HERE -->
+  <img src="Agricon.png" alt="SUIVI App Overview" class="project-hero">
+
 
   <hr>
 
@@ -97,10 +116,6 @@
 
   <hr>
 
-  <div class="section">
-    <h2>User Flow</h2>
-    <div class="placeholder-img">User Flow diagram coming soon</div>
-  </div>
 
   <hr>
 
